# fundi

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  conftest.py  pyproject.toml
backend/apps/accounts/: admin.py  factories.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/accounts/management/commands/: _organisation.py  createsuperuser.py  createuser.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/apps/accounts/tests/: test_auth.py  test_models.py
backend/apps/analytics/: admin.py  insights.py  serializers.py  services.py  tasks.py  templates.py  urls.py  views.py
backend/apps/analytics/management/commands/: seed_demo_data.py
backend/apps/analytics/tests/: test_services.py  test_tasks.py  test_views.py
backend/apps/clients/: admin.py  exceptions.py  factories.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py  0002_lead.py  0003_lead_notes.py
backend/apps/clients/tests/: test_models.py  test_services.py  test_views.py
backend/apps/core/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  signal.py  tasks.py  tests.py  unfold.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py  0002_notification.py  0003_alter_notification_type.py  0004_seed_celery_periodic_tasks.py  0005_migrate_notification_type_values.py  0006_seed_daily_briefing_periodic_task.py
backend/apps/core/static/core/admin/: unfold-overrides.css
backend/apps/invoices/: exceptions.py  factories.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/invoices/migrations/: 0001_initial.py  0002_invoice_number_sequence.py  0003_invoice_notes_payment_notes.py
backend/apps/projects/: exceptions.py  factories.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_milestone_timelog.py  0003_milestone_description.py
backend/apps/projects/tests/: test_models.py  test_services.py  test_views.py
backend/apps/proposals/: apps.py  exceptions.py  factories.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/proposals/migrations/: 0001_initial.py
backend/apps/proposals/tests/: test_models.py  test_services.py  test_views.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  local.py  prod.py  test.py
backend/templates/admin/: index.html
backend/utils/: exceptions.py
docs/: fundi_client_detail.html  fundi_client_list.html  fundi_create_project_drawer.html  fundi_invoice_list.html  fundi_project_detail.html  fundi_project_list.html  fundi_proposal_list.html  lead_create_drawer.html  lead_list_page.html  proposal_detail_page.html  sprint-2-money-layer.html  sprint-3-intelligence-layer.html  sprint2_implementation_plan.html  stero-tech-company-os.html  stero_tech_company_os_dashboard.html  stero_tech_crm_erd.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  (+1 more)
(+64 files in other folders)
