[project]
name = "fundi-backend"
version = "0.1.0"
description = "Fundi CRM — backend API"
authors = [{ name = "Samuel Agyei", email = "agyeisterogh@gmail.com" }]
requires-python = "^3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-unfold (>=0.89.0,<0.90.0)",
    "celery[redis] (>=5.6.3,<6.0.0)",
    "django-celery-beat (>=2.9.0,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=40.13.0,<41.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ipython (>=9.12.0,<10.0.0)",
]
